--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+body, html {
     background-color: rgba(178, 185, 190, 0.425);
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
@@ -112,4 +112,36 @@ button {
     border-radius: 5px;
 }
 
+a {
+    color: rgb(10, 10, 10);
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+.imagen-container {
+    position: relative;
+    width: 100%;
+    height: 100vh; 
+}
+.texto {
+    color: rgb(10, 10, 10);
+    position: absolute;
+    top:50%;
+    left: 0%;
+    right: 60%;
+    transform: translateY(-50%);
+    padding: 0 20px;
+    max-width: 50%;
+    margin: auto;
+    text-align: justify;
+}
+
+h1 {
+    font-size: 2.5em;
+    margin: 0;
+    text-align: center;
+}
+
+p {
+    font-size: 1.5em;
+}
 
